@@ -19,6 +19,9 @@ set     version      @VERSION@
 module-whatis	"returns all various module-info values"
 
 proc InfoOut { } {
+global ModulesCurrentModulefile
+puts stderr	"+++ global vars +++++++++++++++++++++++++++++++"
+puts stderr     "ModulesCurrentModulefile = $ModulesCurrentModulefile"
 puts stderr	"+++ module-info +++++++++++++++++++++++++++++++"
 puts stderr	[ concat	"flags			= " [module-info flags]]
 puts stderr	[ concat	"mode			= " [module-info mode]]
