@@ -727,9 +727,9 @@ extern	int	  store_env( void);
 extern	int	  free_stored_env( void);
 extern	Tcl_HashTable*  environ_changes;
 extern	Tcl_HashTable*  alias_changes;
-extern	char	 *getLMFILES(void);
-extern	int	  IsLoaded( char*, char**, char*);
-extern	int	  IsLoaded_ExactMatch( char*, char	**, char*);
+extern	char	 *getLMFILES(Tcl_Interp*);
+extern	int	  IsLoaded( Tcl_Interp*, char*, char**, char*);
+extern	int	  IsLoaded_ExactMatch( Tcl_Interp*, char*, char	**, char*);
 extern	int	  Update_LoadedList( Tcl_Interp*, char*, char*);
 extern	int	  check_magic( char*, char*, int);
 extern	char	 *xstrtok_r(char *, const char *, char **);
