@@ -33,6 +33,7 @@ modules 3.3.0
 	* Removed the $MODULESHOME env.var. which is not used at all.
 	* Fixed the "module purge" memory corruption (Poor Yorick)
 	* Isolated calls to the new interpreter and get & set env.vars.
+	* Fixed unload & load of same module problem.
 
 ****************************   Release 3.2 ******************************
 Modules 3.2.9
